--- a/pagina/index.html
+++ b/pagina/index.html
@@ -67,7 +67,7 @@
 			<a style ="color:rgb (255, 50, 30);" href="https://logistica130.neolms.com/"><small>Aula Logistica</small></a><br>
 			<a style ="color:rgb (255, 50, 30);" href="https://seghig130.neolms.com/"><small>Aula Seguridad e Higiene</small></a><br>
 
-			<h3 style ="color:blue;"> Contacto </h3>
+			<h3 style ="color:red;"> Contacto </h3>
 			<p> San Martin 3051 - Tel: (02284) 444658 <br>
 			Olavarria - Pcia. de Buenos Aires<br>
 			Email: <a style = "color:orange;" href="mailto:130instituto@gmail.com">130instituto@gmail.com</a> </p>
